Add record patterns